# jiwu-chat-core

./: .env.example  CONFIG.md  DOCKER.md  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: CLAUDE.md  README.md  使用说明.md
backend/jiwu-chat-common-core/: pom.xml
backend/jiwu-chat-common-data/: pom.xml
backend/jiwu-chat-module-admin/: pom.xml
backend/jiwu-chat-module-chat/: pom.xml
backend/jiwu-chat-module-res/: pom.xml
backend/jiwu-chat-module-sys/: pom.xml
backend/jiwu-chat-module-user/: pom.xml
backend/jiwu-chat-starter/: pom.xml
deploy/: .env.example  BUILD-IMAGE.md  docker-compose.yml
docker/: Dockerfile  entrypoint.sh  serve-with-config.js
docs/: index.html
frontend/: nuxt-env.d.ts  package.json
frontend/app/components/chat/Msg/: Main.vue  MsgTemplate.vue  ReactionToolBar.vue  msg.scss
frontend/app/components/chat/Msg/utils/: contextMenu.ts
frontend/app/components/menu/: Bottom.vue
frontend/app/composables/api/chat/: message.ts
frontend/app/composables/hooks/msg/: useMsgLinear.ts
frontend/app/composables/hooks/ws/: messageKeys.ts  messages.ts  useWsCore.ts
frontend/app/composables/store/: useSettingStore.ts
frontend/app/composables/utils/: useBaseUrl.ts  useMitt.ts
frontend/app/constants/: msgContext.ts
frontend/app/types/chat/: WsType.ts
frontend/src-tauri/: Cargo.toml
scripts/: docker-start.sh
